@@ -32,8 +32,8 @@ import org.jfree.data.general.*;
 public class HistogramSeriesAttributes extends SeriesAttributes
     {
     double[] values; 
-    double[] getValues() { return values; }
-    void setValues(double[] vals) { values = vals; }
+    public double[] getValues() { return values; }
+    public void setValues(double[] vals) { values = vals; }
                 
     /** Border thickness */
     float thickness;
