@@ -2590,3 +2590,4 @@ Version 18
 	Extended ThreadedDiffuser in HeatBugs to handle any number of threads
 	Added a "Redaw once at the next step" option to Display2D and 3D
 	Added dashing constants to TimeSeriesAttributes
+	Made public some methods in charting facility
